add bootstrap, header, footer and placeholder structure

--- a/app/views/bulletin/index.html.erb
+++ b/app/views/bulletin/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Bulletin#index</h1>
-<p>Find me in app/views/bulletin/index.html.erb</p>
+<h1>Welcome to Collaborateur</h1>
+<p>Collaborateur is a platform that makes finding local contributors for your creative projects easy.</p> 
