--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,15 @@
   <title>Collaborateur</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+  <%= render 'layouts/shim' %></head>
 </head>
 <body>
+	<%= render 'layouts/header' %>
+	<div class="container">
+		<%= yield %>
+		<%= render 'layouts/footer' %>
+    </div>
 
-<%= yield %>
-
+<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
