--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,15 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= render 'layouts/shim' %></head>
+  
+  <!-- Optimizing for iOS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="hands.png">
+  <link rel="apple-touch-startup-image" href="#">  <!-- Placeholder for startup image -->
+  <meta name="apple-mobile-web-app-title" content="Collaborateur">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
 	<%= render 'layouts/header' %>
