--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -21,19 +21,14 @@
   </p>
 
   <p>
-    <%= f.label :looking_for_a %><br>
-    <%= f.radio_button :kind, "person" %> <%= f.label :person %><br>
-    <%= f.radio_button :kind, "project" %> <%= f.label :project %><br>
-  </p>
-  
-  <p>
-    <%= f.label :about_me %><br>
-    <%= f.text_area :about_me %>
+    <%= f.label :I_am_looking_for %><br>
+    <%= f.radio_button :kind, "people" %> <%= f.label :people %><br>
+    <%= f.radio_button :kind, "projects" %> <%= f.label :projects %><br>
   </p>
 
   <p>
-    <%= f.label :about_you %><br>
-    <%= f.text_area :about_you %>
+    <%= f.label :more_about_me %><br>
+    <%= f.text_area :about_me %>
   </p>
  
   <p>
