add styling to profiles view

--- a/app/views/bulletin/index.html.erb
+++ b/app/views/bulletin/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to Collaborateur</h1>
-<p>Collaborateur is a platform that makes finding local contributors for your creative projects easy.</p> 
+<div class="jumbotron">
+	<h1>Welcome to Collaborateur</h1>
+	<p>Collaborateur is a platform that makes finding local contributors for your creative projects easy.</p> 
+	<p><a href="/signup" class="btn btn-primary btn-lg">Find a Collaborateur</a></p>
+</div>
