Add back-link to bulletin board on views/profiles/show

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -19,6 +19,10 @@
 </p>
 
 <p>
+<%= link_to "Look at the Bulletin Board", profiles_path%>
+</p>
+
+<p>
 <%= link_to "Delete this profile", profile_path(@profile),
   method: :delete, data: { confirm: 'Are you sure?' }%>
 </p>
