--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -24,11 +24,14 @@
     <%= f.label :I_am_looking_for %><br>
     <%= f.radio_button :kind, "people" %> <%= f.label :people %><br>
     <%= f.radio_button :kind, "projects" %> <%= f.label :projects %><br>
-  </p>
-
-  <p>
-    <%= f.label :more_about_me %><br>
-    <%= f.text_area :about_me %>
+    <div id="lookingForPeople">
+      <label>Enter a brief description of your project</label>
+      <%= f.text_area :about %>
+    </div>
+    <div id="lookingForProject">
+      <label>Enter a brief description of your skills</label>
+      <%= f.text_area :about %>
+    </div>
   </p>
  
   <p>
@@ -36,3 +39,22 @@
   </p>
 <% end %>
 
+<script>
+$(document).ready(function(){
+    $("#lookingForPeople").hide();
+    $("#lookingForProject").hide();
+
+    $("input:radio[name='profile[kind]']").change(function(){  
+
+            if (this.value == 'projects' && this.checked){
+              $("#lookingForPeople").hide();
+              $("#lookingForProject").show();
+            }
+            if (this.value == 'people' && this.checked) {
+              $("#lookingForProject").hide();
+              $("#lookingForPeople").show();
+            }
+    });
+
+});
+</script>
