put textarea on new line on signup page

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -25,11 +25,11 @@
     <%= f.radio_button :kind, "people" %> <%= f.label :people %><br>
     <%= f.radio_button :kind, "projects" %> <%= f.label :projects %><br>
     <div id="lookingForPeople">
-      <label>Enter a brief description of your project</label>
+      <label>Enter a brief description of your project</label><br>
       <%= f.text_area :about %>
     </div>
     <div id="lookingForProject">
-      <label>Enter a brief description of your skills</label>
+      <label>Enter a brief description of your skills</label><br>
       <%= f.text_area :about %>
     </div>
   </p>
