fix signup form formatting, add logo and splash screen.

--- a/app/views/bulletin/index.html.erb
+++ b/app/views/bulletin/index.html.erb
@@ -1,5 +1,10 @@
 <div class="jumbotron">
-	<h1>Welcome to Collaborateur</h1>
-	<p>Collaborateur is a platform that makes finding local contributors for your creative projects easy.</p> 
-	<p><a href="/signup" class="btn btn-primary btn-lg">Find a Collaborateur</a></p>
+	<div class="row">
+		<div class="span6" style="text-align:center">
+			<h1><%= image_tag('hands.png', :size => "100x100") %> Collaborateur</h1>
+			<p>Looking for a project to work on, or people to work with?</p>
+			<h2>Finding local contributors was never this easy.</h2> 
+			<a href="/signup" class="btn btn-success btn-lg">Try Collaborateur</a>
+		</div>
+	</div>
 </div>
